[package]
name = "launcher"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "1.1"
libc = "0.2"
which = "8.0"
rustix = { version = "1.1.4", features = ["fs", "pipe", "process", "stdio"] }

[dev-dependencies]
tempfile = "3"
